Um monte de alteração no site.

--- a/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
@@ -171,6 +171,9 @@
         </div>
         </form>
     </div>
+    <div>
+        <strong>(*) Campos obrigatórios.</strong>
+    </div>
 </fieldset>
 
 
