--- a/application/modules/admin/views/scripts/cartao/registrar-aprazar-vacina.phtml
+++ b/application/modules/admin/views/scripts/cartao/registrar-aprazar-vacina.phtml
@@ -201,11 +201,10 @@
                     </div>
                 </form>
             </div> <!--FIM DO SEGUNDO MENU-->
-
-
-
-
         </div>
+    </div>
+    <div>
+        <strong>(*) Campos obrigatórios.</strong>
     </div>
 </fieldset>
 
