--- a/application/modules/admin/views/scripts/cartao/visualisa-vacina.phtml
+++ b/application/modules/admin/views/scripts/cartao/visualisa-vacina.phtml
@@ -262,7 +262,7 @@
                                 <select name="tipoConsulta">
                                     <option value="">--</option>
                                     <option value="nome_vacina">Nome da Vacina</option>
-                                    <option value="dt_aplicacao">Data da Aplicação</option>
+                                    <option value="dt_vacina">Data da Aplicação</option>
                                     <option value="lote">Lote da Vacina</option>
                                     <option value="">Todos</option>
                                 </select>
@@ -331,7 +331,7 @@
                                 <select name="tipoConsulta">
                                     <option value="">--</option>
                                     <option value="nome_vacina">Nome da Vacina</option>
-                                    <option value="dt_aplicacao">Data aprazada</option>
+                                    <option value="dt_vacina">Data aprazada</option>
                                     <option value="">Todos</option>
                                 </select>
                                 <div class="input-append">
@@ -510,7 +510,7 @@
                                 <select name="tipoConsulta">
                                     <option value="">--</option>
                                     <option value="nome_vacina">Nome da Vacina</option>
-                                    <option value="dt_aplicacao">Data da Aplicação</option>
+                                    <option value="dt_vacina">Data da Aplicação</option>
                                     <option value="lote">Lote da Vacina</option>
                                     <option value="">Todos</option>
                                 </select>
@@ -583,7 +583,7 @@
                                 <select name="tipoConsulta">
                                     <option value="">--</option>
                                     <option value="nome_vacina">Nome da Vacina</option>
-                                    <option value="dt_aplicacao">Data aprazada</option>
+                                    <option value="dt_vacina">Data aprazada</option>
                                     <option value="">Todos</option>
                                 </select>
                                 <div class="input-append">
@@ -759,7 +759,7 @@
                                 <select name="tipoConsulta">
                                     <option value="">--</option>
                                     <option value="nome_vacina">Nome da Vacina</option>
-                                    <option value="dt_aplicacao">Data da Aplicação</option>
+                                    <option value="dt_vacina">Data da Aplicação</option>
                                     <option value="lote">Lote da Vacina</option>
                                     <option value="">Todos</option>
                                 </select>
@@ -829,7 +829,7 @@
                                 <select name="tipoConsulta">
                                     <option value="">--</option>
                                     <option value="nome_vacina">Nome da Vacina</option>
-                                    <option value="dt_aplicacao">Data aprazada</option>
+                                    <option value="dt_vacina">Data aprazada</option>
                                     <option value="">Todos</option>
                                 </select>
                                 <div class="input-append">
@@ -993,7 +993,7 @@
                                 <select name="tipoConsulta">
                                     <option value="">--</option>
                                     <option value="nome_vacina">Nome da Vacina</option>
-                                    <option value="dt_aplicacao">Data da Aplicação</option>
+                                    <option value="dt_vacina">Data da Aplicação</option>
                                     <option value="lote">Lote da Vacina</option>
                                     <option value="">Todos</option>
                                 </select>
@@ -1061,7 +1061,7 @@
                                 <select name="tipoConsulta">
                                     <option value="">--</option>
                                     <option value="nome_vacina">Nome da Vacina</option>
-                                    <option value="dt_aplicacao">Data aprazada</option>
+                                    <option value="dt_vacina">Data aprazada</option>
                                     <option value="">Todos</option>
                                 </select>
                                 <div class="input-append">
