--- a/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
@@ -1,6 +1,7 @@
 
 <!--CHAMADA PARA O ARQUIVO JQUERY-->
-<script type="text/javascript" src="/admin/js/pessoa.js"></script>
+<script type="text/javascript" src="/administrator/js/pessoa.js"></script>
+<?php echo $this->modal ?>
 
 <!-- METODO USADO PARA EXIBIR MENSAGENS DO SISTEMA-->
 <?php echo $this->flashMessenger() ?> 
@@ -16,9 +17,9 @@
         </ul>
         <form class="form-horizontal" method="post">
             <div class="tab-content">
-                
+
                 <div id="tab1" class="tab-pane active"> <!--INICIO DA ABA DADOS PRINCIPAIS-->
-                   
+
                     <div class="rows-fluid">  
                         <div class="span6">
                             <div class="control-group">
@@ -57,6 +58,7 @@
                                 <label for="inputEmail" class="control-label">CPF Nº:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cpf ?>
+                                    <div id="cpf-error"></div>
                                 </div>
                             </div>
                             <div class="control-group">
@@ -95,7 +97,7 @@
                 </div> <!--FIM DA ABA DADOS PRINCIPAIS-->
 
                 <div id="tab2" class="tab-pane"> <!--INICIO DA ABA ENDEREÇO-->
-                   
+
                     <div class="rows-fluid">
                         <div class="span6">
                             <div class="control-group">
@@ -145,20 +147,20 @@
                         </div>
                     </div>
 
-                   <!-- <div class="rows-fluid"> 
-                        <div class="span12">
-                            <div class="form-actions">
-                                <div class="control-group">
-                                    <a class="btn btn-primary" href="#tab1" data-toggle="tab">Voltar <i class="icon-backward icon-white"></i></a>
-                                    <a class="btn btn-primary" href="#tab3" data-toggle="tab">Continuar <i class="icon-forward icon-white"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>-->
+                    <!-- <div class="rows-fluid"> 
+                         <div class="span12">
+                             <div class="form-actions">
+                                 <div class="control-group">
+                                     <a class="btn btn-primary" href="#tab1" data-toggle="tab">Voltar <i class="icon-backward icon-white"></i></a>
+                                     <a class="btn btn-primary" href="#tab3" data-toggle="tab">Continuar <i class="icon-forward icon-white"></i></a>
+                                 </div>
+                             </div>
+                         </div>
+                     </div>-->
                 </div> <!--FIM DA ABA ENDEREÇO-->
 
                 <div id="tab3" class="tab-pane">  <!--INICIO DA ABA DADOS COMPLEMENTARES-->
-                    
+
                     <div class="rows-fluid">
                         <div class="span6">
                             <div class="control-group">
@@ -257,5 +259,8 @@
                 </div> <!--FIM DA ABA DADOS COMPLEMENTARES-->
             </div>
         </form>
+    </div>
+    <div>
+        <strong>(*) Campos obrigatórios.</strong>
     </div>
 </fieldset>
