--- a/application/modules/admin/views/scripts/unidade/alterar-unidade.phtml
+++ b/application/modules/admin/views/scripts/unidade/alterar-unidade.phtml
@@ -83,9 +83,9 @@
                             </div>
                         </div>
                         <div class="hidden">
-                            <?php 
-                                echo $this->form->cod_un_saude; 
-                                echo $this->form->cod_end; 
+                            <?php
+                            echo $this->form->cod_un_saude;
+                            echo $this->form->cod_end;
                             ?>
                         </div>
                     </div>
@@ -102,5 +102,8 @@
                 </div> <!--FIM DO SEGUNDO MENU-->
             </div>
         </form>
+    </div>
+    <div>
+        <strong>(*) Campos obrigatórios.</strong>
     </div>
 </fieldset>
