--- a/application/modules/admin/views/scripts/unidade/cadastro-unidade.phtml
+++ b/application/modules/admin/views/scripts/unidade/cadastro-unidade.phtml
@@ -115,4 +115,7 @@
             </div>
         </form>
     </div>
+    <div>
+        <strong>(*) Campos obrigatórios.</strong>
+    </div>
 </fieldset>
