--- a/application/modules/admin/views/scripts/vacina/alterar-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/alterar-vacina.phtml
@@ -80,6 +80,9 @@
             </div> <!--FIM DA PRIMEIRA ABA-MENU-->
         </div>
     </div>
+    <div>
+        <strong>(*) Campos obrigatórios.</strong>
+    </div>
 </fieldset>
 
 
