--- a/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
@@ -52,6 +52,7 @@
                                 <label for="inputEmail" class="control-label">CPF Nº:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cpf ?>
+                                    <div id="cpf-error"></div>
                                 </div>
                             </div>
                             <div class="control-group">
@@ -232,5 +233,8 @@
                 </div> <!--FIM DO TERCEIRO MENU-->
             </div>
         </form>
+    </div>
+    <div>
+        <strong>(*) Campos obrigatórios.</strong>
     </div>
 </fieldset>
