--- a/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
@@ -60,6 +60,7 @@
                                 <label for="inputEmail" class="control-label">CPF Nº:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cpf ?>
+                                    <div id="cpf-error"></div>
                                 </div>
                             </div>
                             <div class="control-group">
@@ -85,15 +86,15 @@
                         </div>
 
                     </div>
-                  <!--  <div class="rows-fluid">
-                        <div class="span12">
-                            <div class="form-actions">
-                                <div class="control-group">
-                                    <a class="btn btn-primary" href="#tab2" data-toggle="tab">Continuar <i class="icon-forward icon-white"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>-->
+                    <!--  <div class="rows-fluid">
+                          <div class="span12">
+                              <div class="form-actions">
+                                  <div class="control-group">
+                                      <a class="btn btn-primary" href="#tab2" data-toggle="tab">Continuar <i class="icon-forward icon-white"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>-->
 
                 </div> <!--FIM DO PRIMEIRO MENU-->
 
@@ -247,5 +248,8 @@
                 </div> <!--FIM DO TERCEIRO MENU-->
             </div>
         </form>
+    </div>
+    <div>
+        <strong>(*) Campos obrigatórios.</strong>
     </div>
 </fieldset>
