--- a/application/modules/admin/views/scripts/utils/modal.phtml
+++ b/application/modules/admin/views/scripts/utils/modal.phtml
@@ -8,6 +8,6 @@
     </div>
     <div class="modal-footer">
         <button class="btn" data-dismiss="modal" aria-hidden="true">Cancelar</button>
-        <button class="btn btn-primary" id="yes">Continuar</button>
+        <button class="btn continue btn-primary" id="yes">Continuar</button>
     </div>
 </div>
