ALTERAÇÃO NO CARTÃO DE VACINAS

--- a/application/modules/site/layout/layout.phtml
+++ b/application/modules/site/layout/layout.phtml
@@ -106,12 +106,12 @@
                 <footer><div class="top"></div>
 
                     <div class="box" style="border:none">
-                        <h5>INSTITUCIONAL</h5>
+                        <h5>Intitucional</h5>
                         <p><a href="/index/institucional">A Empresa </a></p>
                     </div>
 
                     <div class="box" style="width:120px;">
-                        <h5>SERVIÇOS</h5>
+                        <h5>Serviços</h5>
                         <p><a href="/index/consultar-vacinas">Consultar Vacinas </a></p>
                         <p><a href="/index/consultar-calendario">Consultar Calendário</a></p>
                         <p><a href="/index/centro-saude">Consultar Centros de Saúde</a></p>
@@ -130,7 +130,7 @@
                     </div>
 
                     <div class="box" style="width:120px;">
-                        <h5>CONTATO</h5>
+                        <h5>Contato</h5>
                         <p><a href="/index/fale-conosco">Fale Conosco</a></p>
                     </div>
                 </footer>
