--- a/application/modules/site/views/scripts/cartao/visualisa-vacina.phtml
+++ b/application/modules/site/views/scripts/cartao/visualisa-vacina.phtml
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="/js/pessoa.js"></script>
 <fieldset>
-    <legend>Consulta de Calendário, Cartão e Aprazamento de vacinas</legend>
+    <legend>Calendario de Vacinas</legend>
     <?php echo $this->flashMessenger() ?>
     <?php if (Zend_Auth::getInstance()->hasIdentity()): ?>
         <table class="table table-bordered table-condensed " style="font-size: 13px;"> <!--INÍCIO DO CABEÇALHO-->
