--- a/application/modules/site/views/scripts/index/fale-conosco.phtml
+++ b/application/modules/site/views/scripts/index/fale-conosco.phtml
@@ -42,10 +42,10 @@
                             Asa Norte - Bloco B<br /> 
                             (antigo prédio da Câmara Legislativa) <br />
                             CEP: 70086-900</p><br />
-                        E-mail <a href="ouvidoria@saude.df.gov.br">ouvidoria@saude.df.gov.br</a><br /><br /><br />
+                        E-mail <a href="ouvidoria@saude.df.gov.br">ouvidoria@saude.df.gov.br</a><br /><br />
                         <h4><strong><img src="/images/st_direito.png" /> Formulário</strong></h4>
 
-                        <h2> Entre em contato preenchendo nosso formulário </h2>
+                        <h5> Entre em contato preenchendo nosso formulário </h5>
 
                         <form action="enviar.php" method="POST"><input type="hidden">
                             <!--<form  id="contato" action="index.php?link=contato&ev=ok" method="post">-->
