--- a/application/modules/site/views/scripts/index/index.phtml
+++ b/application/modules/site/views/scripts/index/index.phtml
@@ -210,7 +210,7 @@
                     <?php if (!$this->hasIdentity): ?>
                         <form action="/auth/login" method="post" name="frmFaleConosco" onsubmit="return submit_page(this);" > 
                             <strong> Usuário: </strong>
-                            <input id="nome_login" name="nome_login" type="text" placeholder="Inserir seu nome"/><br />
+                            <input id="nome_login" name="nome_login" type="text" placeholder="Inserir seu nome"/>
                             <br />
                             <strong> Senha: </strong>
                             <input name="senha_login" type="password" placeholder="Insira sua senha" />
