--- a/application/modules/admin/views/scripts/cartao/registrar-aprazar-vacina.phtml
+++ b/application/modules/admin/views/scripts/cartao/registrar-aprazar-vacina.phtml
@@ -41,7 +41,7 @@
             </tr>
             <tr>
                 <th style="background-color: #08c; color: #FFFFFF">Telefone celular:&nbsp;</th>
-                <th colspan="6"><?php echo $this->paciente['num_tel'] ?></th>
+                <th colspan="6"><?php echo $this->paciente['telefone_celular'] ?></th>
             </tr>
             <tr>
                 <th style="background-color: #08c; color: #FFFFFF">E-mail:&nbsp;</th>
