--- a/application/modules/admin/views/scripts/cartao/consulta-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/consulta-cartao.phtml
@@ -44,7 +44,7 @@
                    <!-- <td>12</td>-->
                     <td><?php echo $cartao->nome ?></td>
                     <td><?php echo $cartao->nome_mae ?></td>
-                    <td><?php echo date('d-m-y', strtotime($cartao->dt_nasc)) ?></td>
+                    <td><?php echo Simova_Date::dateToView($cartao->dt_nasc) ?></td>
                     <td><?php echo $cartao->sexo ?></td>
                     <td><?php echo $cartao->rg ?></td>
                     <td><?php echo $cartao->telefone_celular ?></td>
