--- a/application/modules/admin/views/scripts/cartao/ver-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/ver-cartao.phtml
@@ -32,7 +32,7 @@
         </tr>
         <tr>
             <th style="background-color: #d9edf7; color: #000;">Data de Nascimento:&nbsp;</th>
-            <th colspan="6"><?php echo date('d-m-Y', strtotime($this->paciente->dt_nasc)) ?></th>
+            <th colspan="6"><?php echo Simova_Date::dateToView($this->paciente->dt_nasc) ?></th>
         </tr>
         <tr>
             <th style="background-color: #d9edf7; color: #000;">Registro de Nascimento:&nbsp;</th>
@@ -49,7 +49,7 @@
             <td style="background-color: #08c; color: #FFFFFF">Reforço</td>
 
         </tr>
-        <?php foreach ($this->cartaoVacina as $key => $columns): ?>
+        <?php foreach ($this->cartaoVacina ? : array() as $key => $columns): ?>
             <?php
             $i = 0;
             ?>
