--- a/application/modules/admin/views/scripts/unidade/alterar-unidade.phtml
+++ b/application/modules/admin/views/scripts/unidade/alterar-unidade.phtml
@@ -38,6 +38,12 @@
                     <div class="rows-fluid">
                         <div class="span6">
                             <div class="control-group">
+                                <label for="inputEmail" class="control-label">Telefone:</label>
+                                <div class="controls">
+                                    <?php echo $this->form->num_tel?>
+                                </div>
+                            </div>  
+                            <div class="control-group">
                                 <label for="inputEmail" class="control-label">Endereço:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->endereco ?>
