--- a/application/modules/admin/views/scripts/unidade/cadastro-unidade.phtml
+++ b/application/modules/admin/views/scripts/unidade/cadastro-unidade.phtml
@@ -1,3 +1,5 @@
+
+
 <fieldset>
     <legend>Cadastrar Unidade de Saúde</legend>
     <?php echo $this->flashMessenger() ?>
@@ -74,6 +76,12 @@
                             </div>
                         </div>
                         <div class="span6">
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Telefone:</label>
+                                <div class="controls">
+                                    <?php echo $this->form->num_tel?>
+                                </div>
+                            </div>  
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">CEP:</label>
                                 <div class="controls">
