--- a/application/modules/admin/views/scripts/unidade/consulta-unidade.phtml
+++ b/application/modules/admin/views/scripts/unidade/consulta-unidade.phtml
@@ -6,7 +6,7 @@
 
     <form class="form-inline" method="post" action="">
         <select name="tipoConsulta">
-            <option value="">Selecione a opção</option>
+            <option value="">--</option>
             <option value="nome">Nome da Unidade</option>
             <option value="nome_mae">Número da Unidade</option>
             <option value="">Todos</option>
