--- a/application/modules/admin/views/scripts/perfil/editar.phtml
+++ b/application/modules/admin/views/scripts/perfil/editar.phtml
@@ -66,7 +66,7 @@
                                     <div class="form-actions">
                                         <div class="control-group">
                                             <button class="btn btn-primary" type="submit">Salvar</button>
-                                            <button class="btn btn-primary" type="reset">Limpar</button>
+                                            <a href="/admin"><button class="btn btn-primary" type="button">Cancelar</button></a>
                                         </div>
                                     </div>
                                 </div>
