--- a/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
@@ -202,7 +202,7 @@
                         </div>
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label"><b>*</b> Telefone residêncial:</label>
+                                <label for="inputEmail" class="control-label">Telefone residêncial:</label>
                                 <div class="controls">
                                     <?php echo $this->form->telefone_residencial ?>
                                 </div>
