--- a/application/modules/admin/views/scripts/perfil/editar.phtml
+++ b/application/modules/admin/views/scripts/perfil/editar.phtml
@@ -1,4 +1,10 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
+<ul class="pager offset10">
+    <li class="previous">
+        <a href="/admin"><i class="icon-arrow-left"></i><strong>Voltar</strong></a>
+    </li>
+
+</ul>
 <fieldset>
     <legend>Alterar Perfil</legend>
     <?php echo $this->flashMessenger() ?>
