--- a/application/modules/admin/views/scripts/unidade/alterar-unidade.phtml
+++ b/application/modules/admin/views/scripts/unidade/alterar-unidade.phtml
@@ -1,4 +1,10 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
+<ul class="pager offset10">
+    <li class="previous">
+        <a href="/admin/unidade/consulta-unidade"><i class="icon-arrow-left"></i><strong>Voltar</strong></a>
+    </li>
+
+</ul>
 <fieldset>
     <?php echo $this->flashMessenger() ?>
     <legend>Alterar Unidade de Saúde</legend>
